--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Weekend Sauna pirts noma latvijā pasākumiem, ballītei vai atpūtai." />
+    <meta name="description" content="Weekend Sauna pirts noma latvijā pasākumiem, ballītei vai atpūtai." data-rh="true" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo19.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
