--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     <meta name="description" content="Weekend Sauna pirts noma latvijā pasākumiem, ballītei vai atpūtai." data-rh="true" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo19.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <title>Weekend Sauna</title>
   </head>
   <body>
